# XWord

./: .gitignore  CMakeLists.txt  README.md  demo_output.docx
examples/: demo.cpp  demo_template.cpp
examples/res/: 平面图.emf
include/xword/: BulletList.hpp  Document.hpp  Equation.hpp  Format.hpp  Image.hpp  Paragraph.hpp  Run.hpp  Table.hpp  Types.hpp  xword.hpp
include/xword/internal/: ZipWriter.hpp
src/: BulletList.cpp  Document.cpp  Equation.cpp  Image.cpp  Paragraph.cpp  Table.cpp
src/internal/: ZipReader.cpp  ZipWriter.cpp  ZipWriter.hpp  utf.hpp
tests/: test_basic.cpp  test_eq_dump.cpp
